Refactored to work with booleans (it was probably generated by C&P from another property type)
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@211084 523d945c-050c-4681-91ec-863ad3bb968a